--- a/OnlyPlants/only_plants_app/pubspec.yaml
+++ b/OnlyPlants/only_plants_app/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^4.13.4
   animated_text_kit: ^4.2.2
   flutter_native_splash: ^2.3.7
+  google_fonts: ^6.1.0
   
 
 dev_dependencies:
@@ -60,8 +61,14 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  fonts:
+    - family: Lobster
+      fonts:
+        - asset: fonts/Lobster-Regular.ttf
+
   assets:
     - assets/image-coming-soon.jpg
+    - assets/plantman.avif
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
